@@ -106,26 +106,6 @@ MemoryFormatAction.2=Signed Decimal
 MemoryFormatAction.3=Unsigned Decimal
 MemoryNumberOfColumnAction.0={0, number, integer} {0, choice, 0\#columns|1\#column|2\#columns}
 MemoryNumberOfColumnAction.1=Unable to change the column number.
-CBreakpointPropertyPage.0=Ignore count must be a nonnegative integer
-CBreakpointPropertyPage.1=Not available
-CBreakpointPropertyPage.2=Function name: 
-CBreakpointPropertyPage.3=C/C++ function breakpoint
-CBreakpointPropertyPage.4=Not available
-CBreakpointPropertyPage.5=Address: 
-CBreakpointPropertyPage.6=C/C++ address breakpoint
-CBreakpointPropertyPage.7=File: 
-CBreakpointPropertyPage.8=C/C++ line breakpoint
-CBreakpointPropertyPage.9=Line number: 
-CBreakpointPropertyPage.10=Project: 
-CBreakpointPropertyPage.11=C/C++ read watchpoint
-CBreakpointPropertyPage.12=C/C++ watchpoint
-CBreakpointPropertyPage.13=C/C++ access watchpoint
-CBreakpointPropertyPage.14=Expression to watch:
-CBreakpointPropertyPage.15=&Condition:
-CBreakpointPropertyPage.16=Invalid condition.
-CBreakpointPropertyPage.17=&Ignore count: 
-CBreakpointPropertyPage.18=Type:
-CBreakpointPropertyPage.19=Enabled
 AddWatchpointActionDelegate.0=Cannot add watchpoint.
 AddWatchpointDialog.0=Add Watchpoint
 AddWatchpointDialog.1=Expression to watch:
