@@ -1,0 +1,31 @@
+###############################################################################
+# Copyright (c) 2003, 2004 QNX Software Systems and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Common Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/cpl-v10.html
+# 
+# Contributors:
+#     QNX Software Systems - initial API and implementation
+###############################################################################
+
+CBreakpointPropertyPage.0=Ignore count must be a nonnegative integer
+CBreakpointPropertyPage.1=Not available
+CBreakpointPropertyPage.2=Function name: 
+CBreakpointPropertyPage.3=C/C++ function breakpoint
+CBreakpointPropertyPage.4=Not available
+CBreakpointPropertyPage.5=Address: 
+CBreakpointPropertyPage.6=C/C++ address breakpoint
+CBreakpointPropertyPage.7=File: 
+CBreakpointPropertyPage.8=C/C++ line breakpoint
+CBreakpointPropertyPage.9=Line number: 
+CBreakpointPropertyPage.10=Project: 
+CBreakpointPropertyPage.11=C/C++ read watchpoint
+CBreakpointPropertyPage.12=C/C++ watchpoint
+CBreakpointPropertyPage.13=C/C++ access watchpoint
+CBreakpointPropertyPage.14=Expression to watch:
+CBreakpointPropertyPage.15=&Condition:
+CBreakpointPropertyPage.16=Invalid condition.
+CBreakpointPropertyPage.17=&Ignore count: 
+CBreakpointPropertyPage.18=Type:
+CBreakpointPropertyPage.19=Enabled
